tidied up about and contact

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@ title: Home
 
 <img src="/images/haskell-logo.png" style="float: right; margin: 10px;" />
 
-<p>Welcome to my blog!</p>
+<p>I read reasonably frequently and tend to like to talk about the books I've read. If you find a review here of a book you've enjoyed please feel free to geek out with me about it. These book reviews will probably be short but should give you info about the genre and what I felt about the novel. Hopefully enough to convince you to read a sample anyway. There is a high probability the book will be sci-fi or fantasy.</p>
 
-<p>I've reproduced a list of recent posts here for your reading pleasure:</p>
+<p>I've reproduced a list of recent reviews here for your reading pleasure:</p>
 
-<h2>Posts</h2>
+<h2>Reviews</h2>
 $partial("templates/post-list.html")$
 
-<p>…or you can find more in the <a href="/archive.html">archives</a>.</p>
+<p>…or you can find more in the <a href="./archive.html">archives</a>.</p>
