--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Home
 
 <h2>Welcome</h2>
 
-<img src="/images/logo.png" style="width: 200px;float: right; margin: 10px;" />
+<img src="/images/shrunk_logo.png" style="width: 200px;float: right; margin: 10px;" />
 
 <p>I read reasonably frequently and tend to like to talk about the books I've read. If you find a review here of a book you've enjoyed please feel free to geek out with me about it. These book reviews will probably be short but should give you info about the genre and what I felt about the novel. Hopefully enough to convince you to read a sample anyway. There is a high probability the book will be sci-fi or fantasy.</p>
 
